# pyskel

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  data.json  environment.yml  main.py  main_example_config.yaml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/: dependabot.yml
.github/actions/build-docs/: action.yml
.github/actions/run-precommit/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml  main_documentation.yml  main_pipeline.yml  pull_request_pipeline.yml
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_1267234e175a5c72_main_py.html  z_6a07bf5284442d43_logger_py.html  z_803ad541a056bb7c_example_py.html  z_803ad541a056bb7c_run_py.html  z_803ad541a056bb7c_utilities_py.html  z_a00847c55a6d0e21_logger_py.html  z_e799482a96fa5115_example_py.html  z_e799482a96fa5115_run_py.html  z_e799482a96fa5115_utilities_py.html
pyskel/: run.py  utilities.py
src/pyskel/: main.py  main_example_config.yaml
src/pyskel/core/: example.py  run.py  utilities.py
tests/: test_main.py
tests/pyskel/: test_example.py  test_main.py  test_run.py  test_utilities.py
tests/pyskel/core/: test_example.py  test_run.py  test_utilities.py
tests/utilities/log/: test_logger.py
utilities/log/: logger.py
